Turn the friend name into a clickable link to show information about them

--- a/templates/home.mustache
+++ b/templates/home.mustache
@@ -11,7 +11,7 @@
     </p>
     <ul>
       {{#friends}}
-        <li>{{name}}</li>
+        <li><a href="/info/{{name}}">{{name}}</a></li>
       {{/friends}}
     </ul>
   </body>
